
  [ Dmitry Shachnev ]
  * Update debian/copyright.
  * Bump Qt build-dependencies to 5.7.0.
  * Drop obsolete Breaks/Replaces.
  * Make the examples package depend on qml-module-qtquick-extras.
  * Make qml-module-qtquick-controls depend on qml-module-qtgraphicaleffects.
  * Add a patch to make the Dashboard example use packaged DejaVu Sans font
    (packaged_dejavu_sans.diff).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 28 Jun 2016 14:43:47 +0200

qtquickcontrols-opensource-src (5.6.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 13 Jun 2016 11:05:08 -0300

qtquickcontrols-opensource-src (5.6.1-1) experimental; urgency=medium

  * New upstream release.
    - Update Qt build dependencies.
  * Bump Standards-Version to 3.9.8, no changes required.
  * Simplify qtquickcontrols5-examples.install, there is a common path for
    all the examples.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 11 Jun 2016 22:40:28 -0300

qtquickcontrols-opensource-src (5.6.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.6.0.
  * Drop unused pkg-kde-tools build-dependency.
  * Use recommended https URIs for Vcs fields.
  * Bump Standards-Version to 3.9.7, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 31 Mar 2016 20:46:08 +0200

qtquickcontrols-opensource-src (5.5.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 21 Oct 2015 19:21:19 -0300

qtquickcontrols-opensource-src (5.5.1-1) experimental; urgency=medium

  [ Dmitry Shachnev ]
  * Minor debian/copyright fixes.

  [ Timo Jyrinki ]
  * New upstream release. 
  * Bump build dependencies.

 -- Timo Jyrinki <timo-jyrinki@ubuntu.com>  Mon, 19 Oct 2015 10:42:58 +0000

qtquickcontrols-opensource-src (5.5.0-1) experimental; urgency=medium

  * New upstream release.