@@ -9,8 +9,17 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: debhelper (>= 9),
                dpkg-dev (>= 1.16.1),
+               qml-module-qtgraphicaleffects (>= 5.7.0~),
+               qml-module-qtquick-layouts (>= 5.7.0~),
+               qml-module-qtqml-models2 (>= 5.7.0~),
+               qml-module-qtquick-window2 (>= 5.7.0~),
+               qml-module-qttest (>= 5.7.0~),
+               qml-module-qt-labs-folderlistmodel (>= 5.7.0~),
+               qml-module-qt-labs-settings (>= 5.7.0~),
                qtbase5-private-dev (>= 5.7.0+dfsg~),
-               qtdeclarative5-private-dev (>= 5.7.0~)
+               qtdeclarative5-private-dev (>= 5.7.0~),
+               xauth,
+               xvfb
 Build-Depends-Indep: libqt5sql5-sqlite (>= 5.7.0+dfsg~),
                      qtbase5-doc-html (>= 5.7.0+dfsg~),
                      qtdeclarative5-doc-html (>= 5.7.0~),
