@@ -16,9 +16,10 @@ export QT_SELECT := qt5
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -rf doc src/controls/controls.qrc src/dialogs/dialogs.qrc
+	rm -rfv test_root
 
 override_dh_auto_configure:
-	qmake
+	qmake QT_BUILD_PARTS+=tests
 
 override_dh_auto_build-indep:
 	dh_auto_build -Smakefile -- docs
@@ -32,6 +33,11 @@ override_dh_auto_install-arch:
 	rm -rfv debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qt5/examples/quickcontrols/extras/dashboard/fonts/
 
 override_dh_auto_test-indep:
+
+override_dh_auto_test-arch:
+	$(MAKE) install INSTALL_ROOT=$(CURDIR)/test_root
+	xvfb-run -a -s "-screen 0 1024x768x24 +extension RANDR +extension RENDER +extension GLX" \
+		dh_auto_test -- QML2_IMPORT_PATH=$(CURDIR)/test_root/usr/lib/$(DEB_HOST_MULTIARCH)/qt5/qml
 
 override_dh_install:
 	dh_install --fail-missing
